# MinVR

./: CMakeLists.txt
config/: ivlabcave-unity.minvr  ivlabcave-vislink.minvr
plugins/GLFW/src/: VRGLFWWindowToolkit.cpp  VRGLFWWindowToolkit.h
plugins/VisLink/: CMakeLists.txt
plugins/VisLink/src/: VRVisLinkPlugin.cpp  VRVisLinkRenderTextureNode.cpp  VRVisLinkRenderTextureNode.h  VRVisLinkTextureNode.cpp  VRVisLinkTextureNode.h
src/display/: VRGraphicsToolkit.h  VRGraphicsWindowNode.cpp  VRWindowToolkit.h
src/main/: VRFactory.h  VRItemFactory.h  VRMain.cpp  VRMain.h  VRMainInterface.h
tests-interactive/opengl-shaderpipeline/: main.cpp
